--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">This is Massively</a></li>
+							<li class="active"><a href="index.html">Home</a></li>
 							<li><a href="generic.html">Generic Page</a></li>
 							<li><a href="elements.html">Elements Reference</a></li>
 						</ul>
@@ -50,32 +50,15 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">14 March 2024</span>
+<!-- 									<span class="date">14 March 2024</span> -->
 									<h2><a href="#">I am McKenzie Larson (she/her), 
 										and I study Colorado weather.</a></h2>
-									<p>I investigate the characteristics of Central U.S. extratropical cyclones and use machine learning to better understand and forecast them. \>
+									<a href="#" class="image left"><img src="images/LarsonHeadshot2024.jpeg" alt="" /></a>
+									<p>I investigate the characteristics of Central U.S. extratropical cyclones and use machine learning to better understand and forecast them.
+										
 									I also use weather and climate models to explore how Colorado Front Range downslope windstorms may change in a future climate.</p>
 								</header>
-								<a href="#" class="image main"><img src="images/LarsonHeadshot2024.jpeg" alt="" /></a>
-								<ul class="actions special">
-									<li><a href="#" class="button small">CV</a></li>
-								</ul>
 							</article>
-
-						<!-- Posts -->
-							<section class="posts">
-								<article>
-									<header>
-										<span class="date">April 24, 2017</span>
-										<h2><a href="#">Sed magna<br />
-										ipsum faucibus</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/LarsonHeadshot2024.jpeg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
 
 					</div>
 
