--- a/index.html
+++ b/index.html
@@ -51,12 +51,11 @@
 							<article class="post featured">
 								<header class="major">
 <!-- 									<span class="date">14 March 2024</span> -->
+									<a href="#" class="image left"><img src="images/LarsonHeadshot2024.jpeg" alt="" /></a>
 									<h2><a href="#">I am McKenzie Larson (she/her), 
 										and I study Colorado weather.</a></h2>
-									<a href="#" class="image left"><img src="images/LarsonHeadshot2024.jpeg" alt="" /></a>
-									<p>I investigate the characteristics of Central U.S. extratropical cyclones and use machine learning to better understand and forecast them.
-										
-									I also use weather and climate models to explore how Colorado Front Range downslope windstorms may change in a future climate.</p>
+									<p>I investigate the characteristics of Central U.S. extratropical cyclones and use machine learning to better understand and forecast them.</p>
+									<p>I also use weather and climate models to explore how Colorado Front Range downslope windstorms may change in a future climate.</p>
 								</header>
 							</article>
 
