--- a/generic.html
+++ b/generic.html
@@ -19,35 +19,33 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Massively</a>
+						<a href="index.html" class="logo">McKenzie L. Larson</a>
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li><a href="index.html">This is Massively</a></li>
-							<li class="active"><a href="generic.html">Generic Page</a></li>
+							<li><a href="index.html">Home</a></li>
+							<li class="active"><a href="generic.html">Publications</a></li>
 							<li><a href="elements.html">Elements Reference</a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://twitter.com/mlarson_wx" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="https://github.com/mckenzielarson" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
 
 				<!-- Main -->
 					<div id="main">
-						<h3>Definition</h3>
+						<h3>Publications</h3>
 									<dl>
-										<dt>[2]</dt>
+<!-- 										<dt>[2]</dt> -->
 										<dd>
-											<p><strong>Larson, M. L.</strong> and A. C. Winters 2024: An Updated Extratropical Cyclone Climatology Across the Central United States. <strong>[in prep]</strong></p>
+											<p><strong>[2] Larson, M. L.</strong> and A. C. Winters 2024: An Updated Climatology of Lee Cyclones Across the Central United States. <strong>[in prep]</strong></p>
 										</dd>
-										<dt>[1]</dt>
+<!-- 										<dt>[1]</dt> -->
 										<dd>
-											<p><strong>*Larson, M. L.</strong>, A. C. Winters, and P. T. Schlatter 2023: Downslope Wind Verification of the National Blend of Models Across the Northern Front Range of Colorado During the 2020/2021 Cool Season. Journal of Operational Meteorology, <strong>[in press]</strong></p>
+											<p><strong>[1] *Larson, M. L.</strong>, A. C. Winters, and P. T. Schlatter 2023: Downslope Wind Verification of the National Blend of Models Across the Northern Front Range of Colorado During the 2020/2021 Cool Season. Journal of Operational Meteorology, <strong>[in press]</strong></p>
 										</dd>
 <!-- 										<dt>Item 3</dt> -->
 										<dd>
