--- a/Publications.html
+++ b/Publications.html
@@ -26,7 +26,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
-							<li class="active"><a href="generic.html">Publications</a></li>
+							<li class="active"><a href="Publications.html">Publications</a></li>
 							<li><a href="elements.html">Elements Reference</a></li>
 						</ul>
 						<ul class="icons">
