--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Home</a></li>
-							<li><a href="generic.html">Generic Page</a></li>
+							<li><a href="Publications.html">Publications</a></li>
 							<li><a href="elements.html">Elements Reference</a></li>
 						</ul>
 						<ul class="icons">
@@ -57,6 +57,8 @@
 									<p>I investigate the characteristics of Central U.S. extratropical cyclones and use machine learning to better understand and forecast them.</p>
 									<p>I also use weather and climate models to explore how Colorado Front Range downslope windstorms may change in a future climate.</p>
 								</header>
+								<section>
+								<section>
 							</article>
 
 					</div>
