--- a/index.html
+++ b/index.html
@@ -54,13 +54,24 @@
 									<h2><a href="#">I am McKenzie Larson (she/her), 
 										and I study Colorado weather.</a></h2>
 								</header>
-								<section>
+								<div class="box">
 									<p>I investigate the characteristics of Central U.S. extratropical cyclones and use machine learning to better understand and forecast them.</p>
 									<p>I also use weather and climate models to explore how Colorado Front Range downslope windstorms may change in a future climate.</p>
-								<section>
+								</div>
 							</article>
 
 					</div>
+					<h2>Box</h2>
+						<div class="box">
+							<p>Ph.D. Student at the University of Colorado Boulder</p>
+							<p>Department of Atmospheric and Oceanic Sciences</p>
+							<p><a href="https://acwinters.weebly.com/">Synoptic Meteorology Group</a></p>
+							<p>Advisor: Dr. Andrew Winters</p>
+							<p>Department of Energy Computational Science Graduate Fellow</p>
+							<p>American Meteorological Society Graduate Fellow</p>
+						</div>
+	
+						<hr />
 
 				<!-- Footer -->
 					<footer id="footer">
