--- a/index.html
+++ b/index.html
@@ -50,26 +50,26 @@
 							<article class="post featured">
 								<header class="major">
 <!-- 									<span class="date">14 March 2024</span> -->
-									<a href="#" class="image left"><img src="images/LarsonHeadshot2024.jpeg" alt="" /></a>
-									<h2><a href="#">I am McKenzie Larson (she/her), 
+									<a class="image left"><img src="images/LarsonHeadshot2024.jpeg" alt="McKenzie L. Larson" /></a>
+									<h2><a>I am McKenzie Larson (she/her), 
 										and I study Colorado weather.</a></h2>
 								</header>
-								<div class="box">
+								<h3> </h3>
 									<p>I investigate the characteristics of Central U.S. extratropical cyclones and use machine learning to better understand and forecast them.</p>
 									<p>I also use weather and climate models to explore how Colorado Front Range downslope windstorms may change in a future climate.</p>
-								</div>
+								
 							</article>
-
+							<article class="post featured">
+								<div class="box">
+									<p><strong>Ph.D. Student at the University of Colorado Boulder</strong></p>
+									<p>Department of Atmospheric and Oceanic Sciences</p>
+									<p><a href="https://acwinters.weebly.com/">Synoptic Meteorology Group</a></p>
+									<p>Advisor: Dr. Andrew Winters</p>
+									<p><strong>Department of Energy Computational Science Graduate Fellow</strong></p>
+									<p><strong>American Meteorological Society Graduate Fellow</strong></p>
+							</article>
 					</div>
-					<h2>Box</h2>
-						<div class="box">
-							<p>Ph.D. Student at the University of Colorado Boulder</p>
-							<p>Department of Atmospheric and Oceanic Sciences</p>
-							<p><a href="https://acwinters.weebly.com/">Synoptic Meteorology Group</a></p>
-							<p>Advisor: Dr. Andrew Winters</p>
-							<p>Department of Energy Computational Science Graduate Fellow</p>
-							<p>American Meteorological Society Graduate Fellow</p>
-						</div>
+					
 	
 						<hr />
 
