--- a/index.html
+++ b/index.html
@@ -75,11 +75,14 @@
 
 				<!-- Footer -->
 					<footer id="footer">
+						<a class="image left"><img src="images/MountainWaveCO.jpg" alt="Colorado Sky" /></a>
 						<section class="split contact">
 							<section>
 								<h3>Email</h3>
 								<p><a href="#">mckenzie.larson@colorado.edu</a></p>
-								<h3>	Social</h3>
+							<section>
+							</section>
+								<h3>Social</h3>
 								<ul class="icons alt">
 									<li><a href="https://twitter.com/mlarson_wx" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="https://github.com/mckenzielarson" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
