--- a/index.html
+++ b/index.html
@@ -75,11 +75,13 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<a class="image left"><img src="images/MountainWaveCO.jpg" alt="Colorado Sky" /></a>
+						<section>
+							<a class="image left"><img src="images/MountainWaveCO.jpg" alt="Colorado Sky" /></a>
+						</section>
 						<section class="split contact">
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">mckenzie.larson@colorado.edu</a></p>
+								<p><a href="mckenzie.larson@colorado.edu">mckenzie.larson@colorado.edu</a></p>
 							<section>
 							</section>
 								<h3>Social</h3>
