--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
-							<a class="image left"><img src="images/MountainWaveCO.jpg" alt="Colorado Sky" /></a>
+							<a class="image fit"><img src="images/MountainWaveCO.jpg" alt="Colorado Sky" /></a>
 						</section>
 						<section class="split contact">
 							<section>
 								<h3>Email</h3>
 								<p><a href="mckenzie.larson@colorado.edu">mckenzie.larson@colorado.edu</a></p>
-							<section>
+							</section>
 							</section>
 								<h3>Social</h3>
 								<ul class="icons alt">
