--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 								<h3>Email</h3>
 								<p><a href="mckenzie.larson@colorado.edu">mckenzie.larson@colorado.edu</a></p>
 							</section>
-							</section>
+							<section>
 								<h3>Social</h3>
 								<ul class="icons alt">
 									<li><a href="https://twitter.com/mlarson_wx" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
