--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>McKenzie L. Larson</h1>
-						<p>Ph.D. Student at the University of Colorado Boulder</p>
+						<p>Ph.D. Student at the University of Colorado Boulder | she/her</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -50,8 +50,8 @@
 							<article class="post featured">
 								<header class="major">
 <!-- 									<span class="date">14 March 2024</span> -->
-									<a class="image left"><img src="images/LarsonHeadshot2024.jpeg" alt="McKenzie L. Larson" /></a>
-									<h2><a>I am McKenzie Larson (she/her), 
+									<a class="image left"><img src="images/LarsonHeadshot2024.jpeg" alt="McKenzie L. Larson" style="width: 100px; height: auto;"/></a>
+									<h2><a>I am McKenzie Larson, 
 										and I study Colorado weather.</a></h2>
 								</header>
 								
