--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
 							<article class="post featured">
 								<header class="major">
 <!-- 									<span class="date">14 March 2024</span> -->
-									<a class="image left"><img src="images/LarsonHeadshot2024.jpeg" alt="McKenzie L. Larson" style="width: 100px; height: auto;"/></a>
+									<a class="image left"><img src="images/LarsonHeadshot2024.jpeg" alt="McKenzie L. Larson" style="width: 200px; height: auto;"/></a>
 									<h2><a>I am McKenzie Larson, 
-										and I study Colorado weather.</a></h2>
+										and I study Colorado Front Range weather.</a></h2>
 								</header>
 								
 							</article>
