--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
 							<article class="post featured">
 								<header class="major">
 <!-- 									<span class="date">14 March 2024</span> -->
-									<a class="image left"><img src="images/LarsonHeadshot2024.jpeg" alt="McKenzie L. Larson" style="width: 200px; height: auto;"/></a>
+									<a class="image left"><img src="images/LarsonHeadshot2024.jpeg" alt="McKenzie L. Larson" style="width: 250px; height: auto;"/></a>
 									<h2><a>I am McKenzie Larson, 
 										and I study Colorado Front Range weather.</a></h2>
 								</header>
 								
-							</article>
-						<article class="post featured">
+<!-- 							</article>
+						<article class="post featured"> -->
 								
 								<p>I investigate the characteristics of Central U.S. extratropical cyclones and use machine learning to better understand and forecast them.</p>
 								<p>I also use weather and climate models to explore how Colorado Front Range downslope windstorms may change in a future climate.</p>
