--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 								<header class="major">
 <!-- 									<span class="date">14 March 2024</span> -->
 									<a class="image left"><img src="images/LarsonHeadshot2024.jpeg" alt="McKenzie L. Larson" style="width: 250px; height: auto;"/></a>
-									<h2><a>I am McKenzie Larson, 
-										and I study Colorado Front Range weather.</a></h2>
+									<h2>I am McKenzie Larson, 
+										and I study Colorado Front Range weather.</h2>
 								</header>
 								
 <!-- 							</article>
@@ -97,7 +97,7 @@
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+						<ul><li>mckenzie.larson@colorado.edu</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
 					</div>
 
 			</div>
