--- a/Publications.html
+++ b/Publications.html
@@ -27,7 +27,7 @@
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
 							<li class="active"><a href="Publications.html">Publications</a></li>
-							<li><a href="elements.html">Elements Reference</a></li>
+<!-- 							<li><a href="elements.html">Elements Reference</a></li> -->
 						</ul>
 						<ul class="icons">
 							<li><a href="https://twitter.com/mlarson_wx" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
