--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 <!-- 							</article>
 						<article class="post featured"> -->
 								
-								<p>I investigate the characteristics of Central U.S. extratropical cyclones and use machine learning to better understand and forecast them.</p>
-								<p>I also use weather and climate models to explore how Colorado Front Range downslope windstorms may change in a future climate.</p>
+								<p>I investigate the characteristics of Central U.S. lee cyclones via machine learning to better understand and forecast these impactful storms. 
+									I also use weather and climate models to explore how Colorado Front Range downslope windstorms may change in a future climate.</p>
 
 								<div class="box">
 									<p><strong>Ph.D. Student at the University of Colorado Boulder</strong></p>
