--- a/Publications.html
+++ b/Publications.html
@@ -42,13 +42,17 @@
 									<dl>
 <!-- 										<dt>[2]</dt> -->
 										<dd>
-											<p><strong>[2] Larson, M. L.</strong> and A. C. Winters 2024: An Updated Climatology of Lee Cyclones Across the Central United States. <strong>[in prep]</strong></p>
+											<p><strong>[3] Larson, M. L.</strong> and A. C. Winters 2024: An Updated Climatology of Lee Cyclones Across the Central United States. <strong>[in prep]</strong></p>
+										</dd>
+<!-- 										<dt>[1]</dt> -->
+										<dd>
+											<p><strong>[2] Meehl, G. A., C. A. Shields, B. M. Myers, </strong>M. L. Larson</strong>, D. Durran, M. Pasha, A. Morales, A. Subramanian, A. C. Winters, P. Schlatter, and M. Weisman: Earth, wind and fire: Are Boulder’s hurricane-force downslope winds changing? Bull. Amer. Meteor. Soc., <strong>[in review]</strong></p>
 										</dd>
 <!-- 										<dt>[1]</dt> -->
 										<dd>
 											<p><strong>[1] *Larson, M. L.</strong>, A. C. Winters, and P. T. Schlatter 2024: Downslope Wind Verification of the National Blend of Models Across the Northern Front Range of Colorado During the 2020/2021 Cool Season. Journal of Operational Meteorology, <strong>[in press]</strong></p>
 										</dd>
-<!-- 										<dt>Item 3</dt> -->
+<!-- 										<dt>Item 4</dt> -->
 										<dd>
 											<p>*Denotes work published from undergraduate research.</p>
 										</dd>
