--- a/Publications.html
+++ b/Publications.html
@@ -46,7 +46,7 @@
 										</dd>
 <!-- 										<dt>[1]</dt> -->
 										<dd>
-											<p><strong>[2] Meehl, G. A., C. A. Shields, B. M. Myers, </strong>M. L. Larson</strong>, D. Durran, M. Pasha, A. Morales, A. Subramanian, A. C. Winters, P. Schlatter, and M. Weisman: Earth, wind and fire: Are Boulder’s hurricane-force downslope winds changing? Bull. Amer. Meteor. Soc., <strong>[in review]</strong></p>
+											<p><strong>[2]</strong> Meehl, G. A., C. A. Shields, B. M. Myers, </strong>M. L. Larson</strong>, D. Durran, M. Pasha, A. Morales, A. Subramanian, A. C. Winters, P. Schlatter, and M. Weisman: Earth, wind and fire: Are Boulder’s hurricane-force downslope winds changing? Bull. Amer. Meteor. Soc., <strong>[in review]</strong></p>
 										</dd>
 <!-- 										<dt>[1]</dt> -->
 										<dd>
