--- a/Publications.html
+++ b/Publications.html
@@ -42,7 +42,7 @@
 									<dl>
 <!-- 										<dt>[2]</dt> -->
 										<dd>
-											<p><strong>[3] Larson, M. L.</strong> and A. C. Winters 2024: An Updated Climatology of Lee Cyclones Across the Central United States. <strong>[in prep]</strong></p>
+											<p><strong>[3] Larson, M. L.</strong> and A. C. Winters 2024: An Updated Climatology of Lee Cyclones Across the Central United States. <strong>[<a href="http://nwafiles.nwas.org/jom/articles/2024/2024-JOM6/2024-JOM6.pdf">PDF</a>]</strong></p>
 										</dd>
 <!-- 										<dt>[1]</dt> -->
 										<dd>
