--- a/Publications.html
+++ b/Publications.html
@@ -42,7 +42,7 @@
 									<dl>
 <!-- 										<dt>[2]</dt> -->
 										<dd>
-											<p><strong>[3] Larson, M. L.</strong> and A. C. Winters 2024: An Updated Climatology of Lee Cyclones Across the Central United States. <strong>[<a href="http://nwafiles.nwas.org/jom/articles/2024/2024-JOM6/2024-JOM6.pdf">PDF</a>]</strong></p>
+											<p><strong>[3] Larson, M. L.</strong> and A. C. Winters 2024: An Updated Climatology of Lee Cyclones Across the Central United States. <strong>[in prep]</strong></p>
 										</dd>
 <!-- 										<dt>[1]</dt> -->
 										<dd>
@@ -50,7 +50,7 @@
 										</dd>
 <!-- 										<dt>[1]</dt> -->
 										<dd>
-											<p><strong>[1] *Larson, M. L.</strong>, A. C. Winters, and P. T. Schlatter 2024: Downslope Wind Verification of the National Blend of Models Across the Northern Front Range of Colorado During the 2020/2021 Cool Season. Journal of Operational Meteorology, <strong>[in press]</strong></p>
+											<p><strong>[1] *Larson, M. L.</strong>, A. C. Winters, and P. T. Schlatter 2024: Downslope Wind Verification of the National Blend of Models Across the Northern Front Range of Colorado During the 2020/2021 Cool Season. Journal of Operational Meteorology, <strong>[<a href="http://nwafiles.nwas.org/jom/articles/2024/2024-JOM6/2024-JOM6.pdf">PDF</a>]</strong></p>
 										</dd>
 <!-- 										<dt>Item 4</dt> -->
 										<dd>
