--- a/Publications.html
+++ b/Publications.html
@@ -27,7 +27,7 @@
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
 							<li class="active"><a href="Publications.html">Publications</a></li>
-							<li><a href="McKenzie_Larson_CV_10032024.pdf">CV</a></li>
+							<li><a href="McKenzie_Larson_CV.pdf">CV</a></li>
 <!-- 							<li><a href="elements.html">Elements Reference</a></li> -->
 						</ul>
 						<ul class="icons">
@@ -42,11 +42,11 @@
 									<dl>
 <!-- 										<dt>[2]</dt> -->
 										<dd>
-											<p><strong>[3] Larson, M. L.</strong> and A. C. Winters 2024: An Updated Climatology of Lee Cyclones Across the Central United States. <strong>[in prep]</strong></p>
+											<p><strong>[3] Larson, M. L.</strong> and A. C. Winters 2025: A Climatology of Lee Cyclones Across the Central United States, 1980–2021. <strong>[in prep]</strong></p>
 										</dd>
 <!-- 										<dt>[1]</dt> -->
 										<dd>
-											<p><strong>[2]</strong> Meehl, G. A., C. A. Shields, B. M. Myers, <strong>M. L. Larson</strong>, D. Durran, M. Pasha, A. Morales, A. Subramanian, A. C. Winters, P. Schlatter, and M. Weisman: Earth, wind and fire: Are Boulder’s hurricane-force downslope winds changing? Bull. Amer. Meteor. Soc., <strong>[in revision]</strong></p>
+											<p><strong>[2]</strong> Meehl, G. A., C. A. Shields, B. M. Myers, <strong>M. L. Larson</strong>, D. Durran, M. Pasha, A. Morales, A. Subramanian, A. C. Winters, P. Schlatter, and M. Weisman: Earth, wind and fire: Are Boulder’s hurricane-force downslope winds changing? Bull. Amer. Meteor. Soc., <strong>[revised version submitted]</strong></p>
 										</dd>
 <!-- 										<dt>[1]</dt> -->
 										<dd>
