--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 						<ul class="links">
 							<li class="active"><a href="index.html">Home</a></li>
 							<li><a href="Publications.html">Publications</a></li>
-							<li><a href="McKenzie_Larson_CV_10032024.pdf">CV</a></li>
+							<li><a href="McKenzie_Larson_CV.pdf">CV</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://twitter.com/mlarson_wx" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
