--- a/Publications.html
+++ b/Publications.html
@@ -42,15 +42,15 @@
 									<dl>
 <!-- 										<dt>[2]</dt> -->
 										<dd>
-											<p><strong>[3] Larson, M. L.</strong> and A. C. Winters 2025: A Climatology of Lee Cyclones Across the Central United States, 1980–2021. <strong>[in prep]</strong></p>
+											<p><strong>[3] Larson, M. L.</strong> and A. C. Winters 2025: A climatology of lee cyclones across the central United States, 1980–2021. <i>Mon. Wea. Rev.</i> <strong>[in review]</strong></p>
 										</dd>
 <!-- 										<dt>[1]</dt> -->
 										<dd>
-											<p><strong>[2]</strong> Meehl, G. A., C. A. Shields, B. M. Myers, <strong>M. L. Larson</strong>, D. Durran, M. Pasha, A. Morales, A. Subramanian, A. C. Winters, P. Schlatter, and M. Weisman: Earth, wind and fire: Are Boulder’s hurricane-force downslope winds changing? Bull. Amer. Meteor. Soc., <strong>[revised version submitted]</strong></p>
+											<p><strong>[2]</strong> Meehl, G. A., C. A. Shields, B. M. Myers, <strong>M. L. Larson</strong>, D. Durran, M. Pasha, A. Morales, A. Subramanian, A. C. Winters, P. Schlatter, and M. Weisman: Earth, wind and fire: Are Boulder’s hurricane-force downslope winds changing? <i>Bull. Amer. Meteor. Soc.</i> <strong>[revised version submitted]</strong></p>
 										</dd>
 <!-- 										<dt>[1]</dt> -->
 										<dd>
-											<p><strong>[1] *Larson, M. L.</strong>, A. C. Winters, and P. T. Schlatter 2024: Downslope Wind Verification of the National Blend of Models Across the Northern Front Range of Colorado During the 2020/2021 Cool Season. Journal of Operational Meteorology, <strong>[<a href="http://nwafiles.nwas.org/jom/articles/2024/2024-JOM6/2024-JOM6.pdf">PDF</a>]</strong></p>
+											<p><strong>[1] *Larson, M. L.</strong>, A. C. Winters, and P. T. Schlatter 2024: Downslope Wind Verification of the National Blend of Models Across the Northern Front Range of Colorado During the 2020/2021 Cool Season. <i>J. of Operational Meteorology</i> <strong>[<a href="http://nwafiles.nwas.org/jom/articles/2024/2024-JOM6/2024-JOM6.pdf">PDF</a>]</strong></p>
 										</dd>
 <!-- 										<dt>Item 4</dt> -->
 										<dd>
