--- a/Publications.html
+++ b/Publications.html
@@ -50,7 +50,7 @@
 										</dd>
 <!-- 										<dt>[1]</dt> -->
 										<dd>
-											<p><strong>[1] *Larson, M. L.</strong>, A. C. Winters, and P. T. Schlatter 2024: Downslope Wind Verification of the National Blend of Models Across the Northern Front Range of Colorado During the 2020/2021 Cool Season. <i>J. of Operational Meteorology</i> <strong>[<a href="http://nwafiles.nwas.org/jom/articles/2024/2024-JOM6/2024-JOM6.pdf">PDF</a>]</strong></p>
+											<p><strong>[1] *Larson, M. L.</strong>, A. C. Winters, and P. T. Schlatter 2024: Downslope Wind Verification of the National Blend of Models Across the Northern Front Range of Colorado During the 2020/2021 Cool Season. <i>J. of Operational Meteorology</i> <strong>[<a href="McKenzie_Larson_CV.pdf">PDF</a>]</strong></p>
 										</dd>
 <!-- 										<dt>Item 4</dt> -->
 										<dd>
