--- a/Publications.html
+++ b/Publications.html
@@ -42,7 +42,7 @@
 									<dl>
 <!-- 										<dt>[2]</dt> -->
 										<dd>
-											<p><strong>[3] Larson, M. L.</strong> and A. C. Winters 2025: A climatology of lee cyclones across the central United States, 1980–2021. <i>Mon. Wea. Rev.</i> <strong>[in review]</strong></p>
+											<p><strong>[3] Larson, M. L.</strong> and A. C. Winters 2025: A climatology of lee cyclones across the central United States, 1980–2021. <i>Mon. Wea. Rev.</i> <strong>[in revision]</strong></p>
 										</dd>
 <!-- 										<dt>[1]</dt> -->
 										<dd>
