--- a/Publications.html
+++ b/Publications.html
@@ -46,11 +46,11 @@
 										</dd>
 <!-- 										<dt>[1]</dt> -->
 										<dd>
-											<p><strong>[2]</strong> Meehl, G. A., C. A. Shields, B. M. Myers, <strong>M. L. Larson</strong>, D. Durran, M. Pasha, A. Morales, A. Subramanian, A. C. Winters, P. Schlatter, and M. Weisman: Earth, wind and fire: Are Boulder’s hurricane-force downslope winds changing? <i>Bull. Amer. Meteor. Soc.</i> <strong>[in press]</strong></p>
+											<p><strong>[2]</strong> Meehl, G. A., C. A. Shields, B. M. Myers, <strong>M. L. Larson</strong>, D. Durran, M. Pasha, A. Morales, A. Subramanian, A. C. Winters, P. Schlatter, and M. Weisman: Earth, wind and fire: Are Boulder’s hurricane-force downslope winds changing? <i>Bull. Amer. Meteor. Soc.</i> <strong>[[<a href="https://journals.ametsoc.org/view/journals/bams/aop/BAMS-D-24-0091.1/BAMS-D-24-0091.1.xml">Early Online Access</a>]</strong></p>
 										</dd>
 <!-- 										<dt>[1]</dt> -->
 										<dd>
-											<p><strong>[1] *Larson, M. L.</strong>, A. C. Winters, and P. T. Schlatter 2024: Downslope Wind Verification of the National Blend of Models Across the Northern Front Range of Colorado During the 2020/2021 Cool Season. <i>J. of Operational Meteorology</i> <strong>[<a href="McKenzie_Larson_CV.pdf">PDF</a>]</strong></p>
+											<p><strong>[1] *Larson, M. L.</strong>, A. C. Winters, and P. T. Schlatter 2024: Downslope Wind Verification of the National Blend of Models Across the Northern Front Range of Colorado During the 2020/2021 Cool Season. <i>J. of Operational Meteorology</i> <strong>[<a href="Larson_et_al_2024.pdf">PDF</a>]</strong></p>
 										</dd>
 <!-- 										<dt>Item 4</dt> -->
 										<dd>
