--- a/Publications.html
+++ b/Publications.html
@@ -42,7 +42,7 @@
 									<dl>
 <!-- 										<dt>[2]</dt> -->
 										<dd>
-											<p><strong>[3] Larson, M. L.</strong> and A. C. Winters 2025: A climatology of lee cyclones across the central United States, 1980–2021. <i>Mon. Wea. Rev.</i> <strong>[in press]</strong></p>
+											<p><strong>[3] Larson, M. L.</strong> and A. C. Winters 2025: A climatology of lee cyclones across the central United States, 1980–2021. <i>Mon. Wea. Rev.</i> <strong>[<a href="https://doi.org/10.1175/MWR-D-25-0013.1">PDF</a>]</strong></p>
 										</dd>
 <!-- 										<dt>[1]</dt> -->
 										<dd>
