--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>McKenzie L. Larson</h1>
-						<p>Ph.D. Student at the University of Colorado Boulder | she/her</p>
+						<p>Ph.D. Candidate at the University of Colorado Boulder | she/her</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -114,4 +114,5 @@
 
 	</body>
 </html>
+
 
